[package]
name = "adivon"
version = "0.2.5"
authors = ["Shuyu Wang <andelf@gmail.com>"]
description = "Data Structures of daily use: Graph, HashTable, PriorityQueue, Trie, SuffixTree, Rope, SplayTree, SkipList, RedBlackTree."
homepage = "https://github.com/andelf/rust-adivon"
repository = "https://github.com/andelf/rust-adivon.git"
keywords = [
  "algorithm",
  "book"
]
license = "MIT OR Apache-2.0"


[dependencies]
rand = "0.3"
vec_map = "0.6"

[dev-dependencies]
quickcheck = "0.3"
