[package]
name = "adivon"
version = "0.2.6"
authors = ["Shuyu Wang <andelf@gmail.com>"]
description = "Data Structures of daily use: Graph, HashTable, PriorityQueue, Trie, SuffixTree, Rope, SplayTree, SkipList, RedBlackTree."
documentation = "https://docs.rs/adivon/"
homepage = "https://github.com/andelf/rust-adivon"
repository = "https://github.com/andelf/rust-adivon.git"
keywords = [
  "algorithm",
  "book"
]
license = "MIT OR Apache-2.0"

[features]
default = []
dev = ["clippy"]

[dependencies]
rand = "0.3"
vec_map = "0.6"
# clippy = "*"
clippy = {version = "0.0", optional = true}

[dev-dependencies]
quickcheck = "0.3"
